<resources>
    <string name="version">Version</string>
    <string name="email">문의/개선사항 및 버그신고 : yabongguri@gmail.com</string>
    <string name="email_chooser">사용할 이메일을 선택해주세요.</string>

    <string name="app_name">던파 루크레이드 맵 가이드</string>
    <string name="card_pattern">카드패 선택</string>
    <string name="il">일반 루크</string>
    <string name="sr">싱글 레이드</string>
    <string name="lr">루크 레이드</string>
    <string name="jj">저지</string>
    <string name="tb">토벌</string>
    <string name="hell_channel">헬 채널</string>
    <string name="banner_ad_unit_id">ca-app-pub-1028137355062989/6823403850</string>

    <string name="jj_pppt">파파파탄</string>
    <string name="jj_ttsss">탄탄소소소</string>
    <string name="jj_others">저지 맵 선택</string>
    <string name="tb_lu">빛</string>
    <string name="tb_cal">어둠</string>
    <string name="tb_energy">에너지 제어실/저장소</string>
    <string name="success">루크 성공</string>
    <string name="il_select">일반 루크 맵 선택</string>
    <string name="il_luke">일반 루크</string>
    <string name="single_select">싱글 루크 맵 선택</string>
    <string name="single_luke">싱글 루크</string>
    <string name="single_1">1번째</string>
    <string name="single_2">2번째</string>

    <string name="hard">\n[하드모드 던전 추가 패턴]</string>
    <string name="hard_t">- 무작위 파티원에게 탄생 촉진 에너지가 생성됩니다.\n- 탄생 촉진 에너지를 보유한 캐릭터가 네임드 / 보스 몬스터에게 접근 시 \n     몬스터가 일시적으로 무적 상태가 되며 체력을 회복합니다.\n- 탄생 촉진 에너지는 일정 시간 후 다른 캐릭터에게 이동합니다.</string>
    <string name="hard_p">- 부폰의 레이더가 모든 맵에 배치됩니다.\n- 부폰의 레이더 중 1개는 무작위 파티원을 추적합니다.\n- 부폰 광폭화 시에는 추가된 레이더들이 정지됩니다.</string>
    <string name="hard_s">- 무작위 파티원 2인에게 소멸의 표식이 생성됩니다.\n- 소멸의 표식을 보유한 캐릭터에게 용암이 떨어지고 용암 지대를 생성합니다.</string>
    <string name="hard_lu">- 루크의 빛이 네임드 / 보스 몬스터에게 쏟아집니다.\n- 루크의 빛은 일정 거리 내에 위치한 플레이어 캐릭터를 밀어냅니다.\n- 일정 시간 후 빛이 퍼지며 모든 캐릭터에게 실명 상태이상을 부여합니다.</string>
    <string name="hard_cal">- 임의의 지점에 어둠의 블랙홀이 생성되고 캐릭터를 지속적으로 끌어 당깁니다.\n- 블랙홀의 깊은 곳까지 빨려 들어가면 저주 상태이상이 부여됩니다.</string>

    <string name="il_sm">솔리움 마키나</string>

    <string name="jj_t">탄생의 성소</string>
    <string name="jj_p">파급의 성소</string>
    <string name="jj_s">소멸의 성소</string>

    <string name="tb_lu1">빛의 제단 진입로</string>
    <string name="tb_lu2">빛의 제단</string>
    <string name="tb_lu3">힘의 제단</string>
    <string name="tb_lu4">빛의 성전</string>
    <string name="tb_lumen">솔리움 마키나: 루멘</string>
    <string name="tb_cal1">어둠의 제단 진입로</string>
    <string name="tb_cal2">어둠의 제단</string>
    <string name="tb_cal3">지혜의 제단</string>
    <string name="tb_cal4">어둠의 성전</string>
    <string name="tb_caligo">솔리움 마키나: 칼리고</string>
    <string name="tb_en_c">에너지 제어실</string>
    <string name="tb_en_j">에너지 저장소</string>

    <string name="ts_card1">1. 오염의 카리나\n2. 양산형 베키</string>
    <string name="ts_card2">1. 레드 크라운\n2. 악몽의 네르베</string>
    <string name="ts_card3">1. 아이언 비스트\n2. 하이퍼스피드 자켈리네</string>
    <string name="ts_card4">1. 초강화 아르고스\n2. 양산형 베키</string>
    <string name="ts_card5">1. 오염의 카리나\n2. 하이퍼스피드 자켈리네</string>

    <string name="mst_metal">메탈기어 카나프스</string>
    <string name="mst_mistral">더 세븐 미스트랄</string>
    <string name="mst_losa">점성술사 로사우라</string>
    <string name="mst_mark">콰트로 마누스 Mark-Ⅱ</string>
    <string name="mst_bupon">비통의 부폰</string>
    <string name="mst_habub">파탄의 하부브</string>
    <string name="mst_beki">양산형 베키</string>
    <string name="mst_red">레드 크라운</string>
    <string name="mst_iron">아이언 비스트</string>
    <string name="mst_argos">초강화 아르고스</string>
    <string name="mst_jakel">하이퍼스피드 자켈리네</string>
    <string name="mst_nerbe">악몽의 네르베</string>
    <string name="mst_ramp">탄식의 램퍼드</string>
    <string name="mst_karina">오염의 카리나</string>

    <string name="mst_yasin">달빛을 걷는 자 - 야신</string>
    <string name="mst_beara">악검 베아라</string>
    <string name="mst_aslan">망각의 아슬란</string>
    <string name="mst_horus">빛의 우상 호루스</string>
    <string name="mst_beil">증오의 베일</string>
    <string name="mst_prince">거완의 왕자 골고타 / 철완의 공주 칼바리</string>
    <string name="mst_snaider">정화의 스네이더</string>
    <string name="mst_anubis">어둠의 우상 아누비스</string>
    <string name="mst_luke">건설자 루크</string>

    <string name="exit_message">앱을 종료하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="exit">종료</string>
</resources>
