<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/version"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="#000000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="12dp"
            android:textAlignment="center"
            android:textColor="#a9a9a9"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="bottom">
        <Button
            android:text="@string/jj"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_jj"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:text="@string/tb"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_tb"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_marginTop="20dp"
            android:text="@string/hell_channel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_hell_channel"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_marginTop="20dp"
            android:text="@string/exit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_close"
            android:layout_gravity="center_horizontal"/>
        <com.google.android.gms.ads.AdView
            android:layout_marginTop="30dp"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</LinearLayout>