<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tan1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tan2"
                android:layout_marginLeft="30dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="탄생의 성소 카드패 선택\n(두번째, 네번째 위치 네임드)"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>
            <RadioGroup
                android:id="@+id/rg_tan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_tan1"
                    android:text="@string/ts_card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>
                <RadioButton
                    android:id="@+id/rb_tan2"
                    android:text="@string/ts_card2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>
                <RadioButton
                    android:id="@+id/rb_tan3"
                    android:text="@string/ts_card3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>
                <RadioButton
                    android:id="@+id/rb_tan4"
                    android:text="@string/ts_card4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"/>
                <RadioButton
                    android:id="@+id/rb_tan5"
                    android:text="@string/ts_card5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <Button
                android:text="저장"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_card_save"
                android:layout_gravity="right"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>