<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="top">
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="파급의 성소 속성 - 안티매직"
                android:textSize="15sp"
                android:textColor="#FF0000"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="물딜팟 - 파파파탄 / 마딜팟 - 탄탄소소소"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="파급의 성소 속성 - 초합금 장갑"
                android:textSize="15sp"
                android:textColor="#FF0000"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="물딜팟 - 탄탄소소소 / 마딜팟 - 파파파탄"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <Button
                android:text="@string/jj_pppt"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_pppt"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>
            <Button
                android:text="@string/jj_ttsss"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ttsss"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"/>
            <Button
                android:text="@string/jj_others"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_others"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>